// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots activities/components/ActivityEdit Disabled 1`] = `
<div class="edit-box">
  <div class="q-mb-lg"><b class="text-negative">This is disabled.</b></div>
  <form class="q-gutter-y-lg">
    <!--v-if-->
    <div class="row q-mt-xs"><label class="q-field row no-wrap items-start q-field--outlined q-input q-mr-sm" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="9" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </label><label class="q-field row no-wrap items-start q-field--outlined q-input" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--round q-btn--actionable q-focusable q-hoverable q-ml-xs" style="font-size: 8px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon fas fa-plus" aria-hidden="true" role="img"> </i></span></button></div>
      </label>
      <!--v-if-->
      <div class="col-12 q-field__bottom">
        <div>When should it take place?</div>
      </div>
    </div>
    <div class="mentionable" style="position: relative;">
      <div class="relative-position q-mb-sm"><label class="q-field row no-wrap items-start q-field--outlined q-textarea q-textarea--autogrow q-field--float q-field--labeled q-field--with-bottom" for="f_01010101-0101-4101-8101-010101010101">
          <!---->
          <div class="q-field__inner relative-position col self-stretch">
            <div class="q-field__control relative-position row no-wrap bg-orange-1" tabindex="-1">
              <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip" style="margin-bottom: -1px;"><textarea class="q-field__native q-placeholder" style="overflow: hidden; min-height: auto; height: 0px;" tabindex="0" rows="1" aria-label="Additional information" id="f_01010101-0101-4101-8101-010101010101" maxlength="5000"></textarea>
                <div class="q-field__label no-pointer-events absolute ellipsis">Additional information</div>
                <!---->
              </div>
            </div>
            <div class="q-field__bottom row items-start q-field__bottom--animated">
              <transition-stub>
                <div class="q-field__messages col"></div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--unelevated q-btn--rectangle q-btn--actionable q-focusable q-hoverable q-btn--dense" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons" aria-hidden="true" role="img">undo</i></span></button></div>
        </label><button class="q-btn q-btn-item non-selectable no-outline q-btn--outline q-btn--rectangle text-primary q-btn--actionable q-focusable q-hoverable absolute-bottom-right bg-white" style="font-size: 8px; bottom: -10px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><span class="block">Preview</span>
          <!----></span>
        </button></div>
      <div class="v-popper v-popper--theme-mentionable v-popper--theme-dropdown popper v-popper--theme-mentionable v-popper--theme-dropdown popper" offset="6" style="position: absolute;">
        <div></div>
      </div>
    </div>
    <div class="q-ml-lg col-12 q-field__bottom text-warning"><i class="q-icon notranslate material-icons" aria-hidden="true" role="presentation">warning</i> This value differs from the default. To undo this change, click on the arrow button and save the changes.</div>
    <div>
      <div class="row">
        <!--v-if-->
        <div class="q-space"></div>
        <!--v-if-->
      </div><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--float q-field--labeled q-field--with-bottom q-my-md" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap bg-null" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" style="max-width: 100px;" tabindex="0" aria-label="Max Slots" placeholder="unlimited" id="f_01010101-0101-4101-8101-010101010101" type="number">
              <div class="q-field__label no-pointer-events absolute ellipsis">Max Slots</div>
              <div class="q-slider q-slider--h q-slider--inactive inline no-wrap column q-slider--enabled q-slider--editable q-slider--label q-mx-sm self-end" role="slider" aria-valuemin="1" aria-valuemax="10" aria-orientation="horizontal" data-step="1" aria-valuenow="2" style="min-width: 60px;">
                <div class="q-slider__track-container q-slider__track-container--h" tabindex="0">
                  <div class="q-slider__track relative-position no-outline" style="height: 4px;">
                    <div class="q-slider__inner absolute" style="left: 0%; width: 100%;"></div>
                    <div class="q-slider__selection absolute" style="left: 0%; width: 11.11111111111111%;"></div>
                    <div class="q-slider__markers q-slider__markers--h absolute overflow-hidden" style="left: 0%; width: 100%; background-size: 11.11111111111111% 2px;"></div>
                    <div class="q-slider__thumb q-slider__thumb--h q-slider__thumb--h-ltr absolute non-selectable" style="width: 20px; height: 20px; left: 11.11111111111111%;"><svg class="q-slider__thumb-shape absolute-full" viewBox="0 0 20 20" aria-hidden="true">
                        <path d="M 4, 10 a 6,6 0 1,0 12,0 a 6,6 0 1,0 -12,0"></path>
                      </svg>
                      <div class="q-slider__focus-ring fit"></div>
                      <div class="q-slider__pin q-slider__pin--h q-slider__pin--h-standard absolute fit no-pointer-events">
                        <div class="q-slider__label q-slider__label--h q-slider__label--h-standard" style="min-width: 20px;">
                          <div class="q-slider__text-container q-slider__text-container--h q-slider__text-container--h-standard" style="transform: translateX(calc(-0.7777777777777778 * 20px / 2 + 38.888888888888886%));"><span class="q-slider__text">2</span></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="q-field__bottom row items-start q-field__bottom--animated">
            <transition-stub>
              <div class="q-field__messages col">
                <div>How many people should participate?</div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="row justify-end q-gutter-sm q-mt-lg">
      <div class="q-toggle cursor-pointer no-outline row inline no-wrap items-center" tabindex="0" role="checkbox" aria-label="Preview" aria-checked="false">
        <div class="q-toggle__inner relative-position non-selectable q-toggle__inner--falsy"><input class="hidden q-toggle__native absolute q-ma-none q-pa-none" type="checkbox">
          <div class="q-toggle__track"></div>
          <div class="q-toggle__thumb absolute flex flex-center no-wrap"></div>
        </div>
        <div class="q-toggle__label q-anchor--skip">Preview</div>
      </div>
      <div class="q-space"></div>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle disabled" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Reset</span></button>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-secondary text-white q-btn--actionable q-focusable q-hoverable" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Enable</span></button><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-primary text-white disabled" tabindex="-1" type="submit" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Save changes</span>
        <transition-stub>
          <!---->
        </transition-stub>
      </button>
    </div>
    <!--v-if-->
  </form>
</div>
`;

exports[`Storyshots activities/components/ActivityEdit Error 1`] = `
<div class="edit-box">
  <div class="q-mb-lg">
    <!--v-if-->
  </div>
  <form class="q-gutter-y-lg">
    <!--v-if-->
    <div class="row q-mt-xs"><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--error q-field--highlighted q-mr-sm" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap text-negative" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="9" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
            <div class="q-field__append q-field__marginal row no-wrap items-center q-anchor--skip"><i class="q-icon text-negative notranslate material-icons" aria-hidden="true" role="presentation">error</i></div>
          </div>
          <!---->
        </div>
        <!---->
      </label><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--error q-field--highlighted" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap text-negative" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
            <div class="q-field__append q-field__marginal row no-wrap items-center q-anchor--skip"><i class="q-icon text-negative notranslate material-icons" aria-hidden="true" role="presentation">error</i></div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--round q-btn--actionable q-focusable q-hoverable q-ml-xs" style="font-size: 8px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon fas fa-plus" aria-hidden="true" role="img"> </i></span></button></div>
      </label>
      <!--v-if-->
      <div class="col-12 q-field__bottom">
        <div class="text-negative">Wrong time</div>
      </div>
    </div>
    <div class="mentionable" style="position: relative;">
      <div class="relative-position q-mb-sm"><label class="q-field row no-wrap items-start q-field--outlined q-textarea q-textarea--autogrow q-field--float q-field--labeled q-field--with-bottom" for="f_01010101-0101-4101-8101-010101010101">
          <!---->
          <div class="q-field__inner relative-position col self-stretch">
            <div class="q-field__control relative-position row no-wrap bg-orange-1" tabindex="-1">
              <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip" style="margin-bottom: -1px;"><textarea class="q-field__native q-placeholder" style="overflow: hidden; min-height: auto; height: 0px;" tabindex="0" rows="1" aria-label="Additional information" id="f_01010101-0101-4101-8101-010101010101" maxlength="5000"></textarea>
                <div class="q-field__label no-pointer-events absolute ellipsis">Additional information</div>
                <!---->
              </div>
            </div>
            <div class="q-field__bottom row items-start q-field__bottom--animated">
              <transition-stub>
                <div class="q-field__messages col"></div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--unelevated q-btn--rectangle q-btn--actionable q-focusable q-hoverable q-btn--dense" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons" aria-hidden="true" role="img">undo</i></span></button></div>
        </label><button class="q-btn q-btn-item non-selectable no-outline q-btn--outline q-btn--rectangle text-primary q-btn--actionable q-focusable q-hoverable absolute-bottom-right bg-white" style="font-size: 8px; bottom: -10px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><span class="block">Preview</span>
          <!----></span>
        </button></div>
      <div class="v-popper v-popper--theme-mentionable v-popper--theme-dropdown popper v-popper--theme-mentionable v-popper--theme-dropdown popper" offset="6" style="position: absolute;">
        <div></div>
      </div>
    </div>
    <div class="q-ml-lg col-12 q-field__bottom text-warning"><i class="q-icon notranslate material-icons" aria-hidden="true" role="presentation">warning</i> This value differs from the default. To undo this change, click on the arrow button and save the changes.</div>
    <div>
      <div class="row">
        <!--v-if-->
        <div class="q-space"></div>
        <!--v-if-->
      </div><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--float q-field--labeled q-field--with-bottom q-my-md" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap bg-null" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" style="max-width: 100px;" tabindex="0" aria-label="Max Slots" placeholder="unlimited" id="f_01010101-0101-4101-8101-010101010101" type="number">
              <div class="q-field__label no-pointer-events absolute ellipsis">Max Slots</div>
              <div class="q-slider q-slider--h q-slider--inactive inline no-wrap column q-slider--enabled q-slider--editable q-slider--label q-mx-sm self-end" role="slider" aria-valuemin="1" aria-valuemax="10" aria-orientation="horizontal" data-step="1" aria-valuenow="2" style="min-width: 60px;">
                <div class="q-slider__track-container q-slider__track-container--h" tabindex="0">
                  <div class="q-slider__track relative-position no-outline" style="height: 4px;">
                    <div class="q-slider__inner absolute" style="left: 0%; width: 100%;"></div>
                    <div class="q-slider__selection absolute" style="left: 0%; width: 11.11111111111111%;"></div>
                    <div class="q-slider__markers q-slider__markers--h absolute overflow-hidden" style="left: 0%; width: 100%; background-size: 11.11111111111111% 2px;"></div>
                    <div class="q-slider__thumb q-slider__thumb--h q-slider__thumb--h-ltr absolute non-selectable" style="width: 20px; height: 20px; left: 11.11111111111111%;"><svg class="q-slider__thumb-shape absolute-full" viewBox="0 0 20 20" aria-hidden="true">
                        <path d="M 4, 10 a 6,6 0 1,0 12,0 a 6,6 0 1,0 -12,0"></path>
                      </svg>
                      <div class="q-slider__focus-ring fit"></div>
                      <div class="q-slider__pin q-slider__pin--h q-slider__pin--h-standard absolute fit no-pointer-events">
                        <div class="q-slider__label q-slider__label--h q-slider__label--h-standard" style="min-width: 20px;">
                          <div class="q-slider__text-container q-slider__text-container--h q-slider__text-container--h-standard" style="transform: translateX(calc(-0.7777777777777778 * 20px / 2 + 38.888888888888886%));"><span class="q-slider__text">2</span></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="q-field__bottom row items-start q-field__bottom--animated">
            <transition-stub>
              <div class="q-field__messages col">
                <div>How many people should participate?</div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="row justify-end q-gutter-sm q-mt-lg">
      <div class="q-toggle cursor-pointer no-outline row inline no-wrap items-center" tabindex="0" role="checkbox" aria-label="Preview" aria-checked="false">
        <div class="q-toggle__inner relative-position non-selectable q-toggle__inner--falsy"><input class="hidden q-toggle__native absolute q-ma-none q-pa-none" type="checkbox">
          <div class="q-toggle__track"></div>
          <div class="q-toggle__thumb absolute flex flex-center no-wrap"></div>
        </div>
        <div class="q-toggle__label q-anchor--skip">Preview</div>
      </div>
      <div class="q-space"></div>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle disabled" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Reset</span></button><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-red text-white q-btn--actionable q-focusable q-hoverable" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Disable</span></button>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-primary text-white disabled" tabindex="-1" type="submit" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Save changes</span>
        <transition-stub>
          <!---->
        </transition-stub>
      </button>
    </div>
    <!--v-if-->
  </form>
</div>
`;

exports[`Storyshots activities/components/ActivityEdit Normal 1`] = `
<div class="edit-box">
  <div class="q-mb-lg">
    <!--v-if-->
  </div>
  <form class="q-gutter-y-lg">
    <!--v-if-->
    <div class="row q-mt-xs"><label class="q-field row no-wrap items-start q-field--outlined q-input q-mr-sm" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="9" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </label><label class="q-field row no-wrap items-start q-field--outlined q-input" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--round q-btn--actionable q-focusable q-hoverable q-ml-xs" style="font-size: 8px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon fas fa-plus" aria-hidden="true" role="img"> </i></span></button></div>
      </label>
      <!--v-if-->
      <div class="col-12 q-field__bottom">
        <div>When should it take place?</div>
      </div>
    </div>
    <div class="mentionable" style="position: relative;">
      <div class="relative-position q-mb-sm"><label class="q-field row no-wrap items-start q-field--outlined q-textarea q-textarea--autogrow q-field--float q-field--labeled q-field--with-bottom" for="f_01010101-0101-4101-8101-010101010101">
          <!---->
          <div class="q-field__inner relative-position col self-stretch">
            <div class="q-field__control relative-position row no-wrap bg-orange-1" tabindex="-1">
              <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip" style="margin-bottom: -1px;"><textarea class="q-field__native q-placeholder" style="overflow: hidden; min-height: auto; height: 0px;" tabindex="0" rows="1" aria-label="Additional information" id="f_01010101-0101-4101-8101-010101010101" maxlength="5000"></textarea>
                <div class="q-field__label no-pointer-events absolute ellipsis">Additional information</div>
                <!---->
              </div>
            </div>
            <div class="q-field__bottom row items-start q-field__bottom--animated">
              <transition-stub>
                <div class="q-field__messages col"></div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--unelevated q-btn--rectangle q-btn--actionable q-focusable q-hoverable q-btn--dense" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons" aria-hidden="true" role="img">undo</i></span></button></div>
        </label><button class="q-btn q-btn-item non-selectable no-outline q-btn--outline q-btn--rectangle text-primary q-btn--actionable q-focusable q-hoverable absolute-bottom-right bg-white" style="font-size: 8px; bottom: -10px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><span class="block">Preview</span>
          <!----></span>
        </button></div>
      <div class="v-popper v-popper--theme-mentionable v-popper--theme-dropdown popper v-popper--theme-mentionable v-popper--theme-dropdown popper" offset="6" style="position: absolute;">
        <div></div>
      </div>
    </div>
    <div class="q-ml-lg col-12 q-field__bottom text-warning"><i class="q-icon notranslate material-icons" aria-hidden="true" role="presentation">warning</i> This value differs from the default. To undo this change, click on the arrow button and save the changes.</div>
    <div>
      <div class="row">
        <!--v-if-->
        <div class="q-space"></div>
        <!--v-if-->
      </div><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--float q-field--labeled q-field--with-bottom q-my-md" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap bg-null" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" style="max-width: 100px;" tabindex="0" aria-label="Max Slots" placeholder="unlimited" id="f_01010101-0101-4101-8101-010101010101" type="number">
              <div class="q-field__label no-pointer-events absolute ellipsis">Max Slots</div>
              <div class="q-slider q-slider--h q-slider--inactive inline no-wrap column q-slider--enabled q-slider--editable q-slider--label q-mx-sm self-end" role="slider" aria-valuemin="1" aria-valuemax="10" aria-orientation="horizontal" data-step="1" aria-valuenow="2" style="min-width: 60px;">
                <div class="q-slider__track-container q-slider__track-container--h" tabindex="0">
                  <div class="q-slider__track relative-position no-outline" style="height: 4px;">
                    <div class="q-slider__inner absolute" style="left: 0%; width: 100%;"></div>
                    <div class="q-slider__selection absolute" style="left: 0%; width: 11.11111111111111%;"></div>
                    <div class="q-slider__markers q-slider__markers--h absolute overflow-hidden" style="left: 0%; width: 100%; background-size: 11.11111111111111% 2px;"></div>
                    <div class="q-slider__thumb q-slider__thumb--h q-slider__thumb--h-ltr absolute non-selectable" style="width: 20px; height: 20px; left: 11.11111111111111%;"><svg class="q-slider__thumb-shape absolute-full" viewBox="0 0 20 20" aria-hidden="true">
                        <path d="M 4, 10 a 6,6 0 1,0 12,0 a 6,6 0 1,0 -12,0"></path>
                      </svg>
                      <div class="q-slider__focus-ring fit"></div>
                      <div class="q-slider__pin q-slider__pin--h q-slider__pin--h-standard absolute fit no-pointer-events">
                        <div class="q-slider__label q-slider__label--h q-slider__label--h-standard" style="min-width: 20px;">
                          <div class="q-slider__text-container q-slider__text-container--h q-slider__text-container--h-standard" style="transform: translateX(calc(-0.7777777777777778 * 20px / 2 + 38.888888888888886%));"><span class="q-slider__text">2</span></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="q-field__bottom row items-start q-field__bottom--animated">
            <transition-stub>
              <div class="q-field__messages col">
                <div>How many people should participate?</div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="row justify-end q-gutter-sm q-mt-lg">
      <div class="q-toggle cursor-pointer no-outline row inline no-wrap items-center" tabindex="0" role="checkbox" aria-label="Preview" aria-checked="false">
        <div class="q-toggle__inner relative-position non-selectable q-toggle__inner--falsy"><input class="hidden q-toggle__native absolute q-ma-none q-pa-none" type="checkbox">
          <div class="q-toggle__track"></div>
          <div class="q-toggle__thumb absolute flex flex-center no-wrap"></div>
        </div>
        <div class="q-toggle__label q-anchor--skip">Preview</div>
      </div>
      <div class="q-space"></div>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle disabled" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Reset</span></button><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-red text-white q-btn--actionable q-focusable q-hoverable" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Disable</span></button>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-primary text-white disabled" tabindex="-1" type="submit" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Save changes</span>
        <transition-stub>
          <!---->
        </transition-stub>
      </button>
    </div>
    <!--v-if-->
  </form>
</div>
`;

exports[`Storyshots activities/components/ActivityEdit Pending 1`] = `
<div class="edit-box">
  <div class="q-mb-lg">
    <!--v-if-->
  </div>
  <form class="q-gutter-y-lg">
    <!--v-if-->
    <div class="row q-mt-xs"><label class="q-field row no-wrap items-start q-field--outlined q-input q-mr-sm" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="9" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </label><label class="q-field row no-wrap items-start q-field--outlined q-input" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--round q-btn--actionable q-focusable q-hoverable q-ml-xs" style="font-size: 8px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon fas fa-plus" aria-hidden="true" role="img"> </i></span></button></div>
      </label>
      <!--v-if-->
      <div class="col-12 q-field__bottom">
        <div>When should it take place?</div>
      </div>
    </div>
    <div class="mentionable" style="position: relative;">
      <div class="relative-position q-mb-sm"><label class="q-field row no-wrap items-start q-field--outlined q-textarea q-textarea--autogrow q-field--float q-field--labeled q-field--with-bottom" for="f_01010101-0101-4101-8101-010101010101">
          <!---->
          <div class="q-field__inner relative-position col self-stretch">
            <div class="q-field__control relative-position row no-wrap bg-orange-1" tabindex="-1">
              <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip" style="margin-bottom: -1px;"><textarea class="q-field__native q-placeholder" style="overflow: hidden; min-height: auto; height: 0px;" tabindex="0" rows="1" aria-label="Additional information" id="f_01010101-0101-4101-8101-010101010101" maxlength="5000"></textarea>
                <div class="q-field__label no-pointer-events absolute ellipsis">Additional information</div>
                <!---->
              </div>
            </div>
            <div class="q-field__bottom row items-start q-field__bottom--animated">
              <transition-stub>
                <div class="q-field__messages col"></div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--unelevated q-btn--rectangle q-btn--actionable q-focusable q-hoverable q-btn--dense" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons" aria-hidden="true" role="img">undo</i></span></button></div>
        </label><button class="q-btn q-btn-item non-selectable no-outline q-btn--outline q-btn--rectangle text-primary q-btn--actionable q-focusable q-hoverable absolute-bottom-right bg-white" style="font-size: 8px; bottom: -10px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><span class="block">Preview</span>
          <!----></span>
        </button></div>
      <div class="v-popper v-popper--theme-mentionable v-popper--theme-dropdown popper v-popper--theme-mentionable v-popper--theme-dropdown popper" offset="6" style="position: absolute;">
        <div></div>
      </div>
    </div>
    <div class="q-ml-lg col-12 q-field__bottom text-warning"><i class="q-icon notranslate material-icons" aria-hidden="true" role="presentation">warning</i> This value differs from the default. To undo this change, click on the arrow button and save the changes.</div>
    <div>
      <div class="row">
        <!--v-if-->
        <div class="q-space"></div>
        <!--v-if-->
      </div><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--float q-field--labeled q-field--with-bottom q-my-md" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap bg-null" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" style="max-width: 100px;" tabindex="0" aria-label="Max Slots" placeholder="unlimited" id="f_01010101-0101-4101-8101-010101010101" type="number">
              <div class="q-field__label no-pointer-events absolute ellipsis">Max Slots</div>
              <div class="q-slider q-slider--h q-slider--inactive inline no-wrap column q-slider--enabled q-slider--editable q-slider--label q-mx-sm self-end" role="slider" aria-valuemin="1" aria-valuemax="10" aria-orientation="horizontal" data-step="1" aria-valuenow="2" style="min-width: 60px;">
                <div class="q-slider__track-container q-slider__track-container--h" tabindex="0">
                  <div class="q-slider__track relative-position no-outline" style="height: 4px;">
                    <div class="q-slider__inner absolute" style="left: 0%; width: 100%;"></div>
                    <div class="q-slider__selection absolute" style="left: 0%; width: 11.11111111111111%;"></div>
                    <div class="q-slider__markers q-slider__markers--h absolute overflow-hidden" style="left: 0%; width: 100%; background-size: 11.11111111111111% 2px;"></div>
                    <div class="q-slider__thumb q-slider__thumb--h q-slider__thumb--h-ltr absolute non-selectable" style="width: 20px; height: 20px; left: 11.11111111111111%;"><svg class="q-slider__thumb-shape absolute-full" viewBox="0 0 20 20" aria-hidden="true">
                        <path d="M 4, 10 a 6,6 0 1,0 12,0 a 6,6 0 1,0 -12,0"></path>
                      </svg>
                      <div class="q-slider__focus-ring fit"></div>
                      <div class="q-slider__pin q-slider__pin--h q-slider__pin--h-standard absolute fit no-pointer-events">
                        <div class="q-slider__label q-slider__label--h q-slider__label--h-standard" style="min-width: 20px;">
                          <div class="q-slider__text-container q-slider__text-container--h q-slider__text-container--h-standard" style="transform: translateX(calc(-0.7777777777777778 * 20px / 2 + 38.888888888888886%));"><span class="q-slider__text">2</span></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="q-field__bottom row items-start q-field__bottom--animated">
            <transition-stub>
              <div class="q-field__messages col">
                <div>How many people should participate?</div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="row justify-end q-gutter-sm q-mt-lg">
      <div class="q-toggle cursor-pointer no-outline row inline no-wrap items-center" tabindex="0" role="checkbox" aria-label="Preview" aria-checked="false">
        <div class="q-toggle__inner relative-position non-selectable q-toggle__inner--falsy"><input class="hidden q-toggle__native absolute q-ma-none q-pa-none" type="checkbox">
          <div class="q-toggle__track"></div>
          <div class="q-toggle__thumb absolute flex flex-center no-wrap"></div>
        </div>
        <div class="q-toggle__label q-anchor--skip">Preview</div>
      </div>
      <div class="q-space"></div>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle disabled" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Reset</span></button><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-red text-white q-btn--actionable q-focusable q-hoverable" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Disable</span></button>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-primary text-white disabled" tabindex="-1" type="submit" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row q-btn__content--hidden">Save changes</span>
        <transition-stub><span class="absolute-full flex flex-center"><svg class="q-spinner q-spinner-mat" width="1em" height="1em" viewBox="25 25 50 50"><circle class="path" cx="50" cy="50" r="20" fill="none" stroke="currentColor" stroke-width="5" stroke-miterlimit="10"></circle></svg></span></transition-stub>
      </button>
    </div>
    <!--v-if-->
  </form>
</div>
`;

exports[`Storyshots activities/components/ActivityEdit Series Changed 1`] = `
<div class="edit-box">
  <div class="q-mb-lg">
    <!--v-if-->
  </div>
  <form class="q-gutter-y-lg">
    <!--v-if-->
    <div class="row q-mt-xs"><label class="q-field row no-wrap items-start q-field--outlined q-input q-mr-sm" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="9" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </label><label class="q-field row no-wrap items-start q-field--outlined q-input" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--round q-btn--actionable q-focusable q-hoverable q-ml-xs" style="font-size: 8px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon fas fa-plus" aria-hidden="true" role="img"> </i></span></button></div>
      </label>
      <!--v-if-->
      <div class="col-12 q-field__bottom">
        <div>When should it take place?</div>
      </div>
    </div>
    <div class="mentionable" style="position: relative;">
      <div class="relative-position q-mb-sm"><label class="q-field row no-wrap items-start q-field--outlined q-textarea q-textarea--autogrow q-field--float q-field--labeled q-field--with-bottom" for="f_01010101-0101-4101-8101-010101010101">
          <!---->
          <div class="q-field__inner relative-position col self-stretch">
            <div class="q-field__control relative-position row no-wrap bg-orange-1" tabindex="-1">
              <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip" style="margin-bottom: -1px;"><textarea class="q-field__native q-placeholder" style="overflow: hidden; min-height: auto; height: 0px;" tabindex="0" rows="1" aria-label="Additional information" id="f_01010101-0101-4101-8101-010101010101" maxlength="5000"></textarea>
                <div class="q-field__label no-pointer-events absolute ellipsis">Additional information</div>
                <!---->
              </div>
            </div>
            <div class="q-field__bottom row items-start q-field__bottom--animated">
              <transition-stub>
                <div class="q-field__messages col"></div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--unelevated q-btn--rectangle q-btn--actionable q-focusable q-hoverable q-btn--dense" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons" aria-hidden="true" role="img">undo</i></span></button></div>
        </label><button class="q-btn q-btn-item non-selectable no-outline q-btn--outline q-btn--rectangle text-primary q-btn--actionable q-focusable q-hoverable absolute-bottom-right bg-white" style="font-size: 8px; bottom: -10px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><span class="block">Preview</span>
          <!----></span>
        </button></div>
      <div class="v-popper v-popper--theme-mentionable v-popper--theme-dropdown popper v-popper--theme-mentionable v-popper--theme-dropdown popper" offset="6" style="position: absolute;">
        <div></div>
      </div>
    </div>
    <div class="q-ml-lg col-12 q-field__bottom text-warning"><i class="q-icon notranslate material-icons" aria-hidden="true" role="presentation">warning</i> This value differs from the default. To undo this change, click on the arrow button and save the changes.</div>
    <div>
      <div class="row">
        <!--v-if-->
        <div class="q-space"></div>
        <!--v-if-->
      </div><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--float q-field--labeled q-field--with-bottom q-my-md" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap bg-null" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" style="max-width: 100px;" tabindex="0" aria-label="Max Slots" placeholder="unlimited" id="f_01010101-0101-4101-8101-010101010101" type="number">
              <div class="q-field__label no-pointer-events absolute ellipsis">Max Slots</div>
              <div class="q-slider q-slider--h q-slider--inactive inline no-wrap column q-slider--enabled q-slider--editable q-slider--label q-mx-sm self-end" role="slider" aria-valuemin="1" aria-valuemax="10" aria-orientation="horizontal" data-step="1" aria-valuenow="2" style="min-width: 60px;">
                <div class="q-slider__track-container q-slider__track-container--h" tabindex="0">
                  <div class="q-slider__track relative-position no-outline" style="height: 4px;">
                    <div class="q-slider__inner absolute" style="left: 0%; width: 100%;"></div>
                    <div class="q-slider__selection absolute" style="left: 0%; width: 11.11111111111111%;"></div>
                    <div class="q-slider__markers q-slider__markers--h absolute overflow-hidden" style="left: 0%; width: 100%; background-size: 11.11111111111111% 2px;"></div>
                    <div class="q-slider__thumb q-slider__thumb--h q-slider__thumb--h-ltr absolute non-selectable" style="width: 20px; height: 20px; left: 11.11111111111111%;"><svg class="q-slider__thumb-shape absolute-full" viewBox="0 0 20 20" aria-hidden="true">
                        <path d="M 4, 10 a 6,6 0 1,0 12,0 a 6,6 0 1,0 -12,0"></path>
                      </svg>
                      <div class="q-slider__focus-ring fit"></div>
                      <div class="q-slider__pin q-slider__pin--h q-slider__pin--h-standard absolute fit no-pointer-events">
                        <div class="q-slider__label q-slider__label--h q-slider__label--h-standard" style="min-width: 20px;">
                          <div class="q-slider__text-container q-slider__text-container--h q-slider__text-container--h-standard" style="transform: translateX(calc(-0.7777777777777778 * 20px / 2 + 38.888888888888886%));"><span class="q-slider__text">2</span></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="q-field__bottom row items-start q-field__bottom--animated">
            <transition-stub>
              <div class="q-field__messages col">
                <div>How many people should participate?</div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="row justify-end q-gutter-sm q-mt-lg">
      <div class="q-toggle cursor-pointer no-outline row inline no-wrap items-center" tabindex="0" role="checkbox" aria-label="Preview" aria-checked="false">
        <div class="q-toggle__inner relative-position non-selectable q-toggle__inner--falsy"><input class="hidden q-toggle__native absolute q-ma-none q-pa-none" type="checkbox">
          <div class="q-toggle__track"></div>
          <div class="q-toggle__thumb absolute flex flex-center no-wrap"></div>
        </div>
        <div class="q-toggle__label q-anchor--skip">Preview</div>
      </div>
      <div class="q-space"></div>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle disabled" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Reset</span></button><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-red text-white q-btn--actionable q-focusable q-hoverable" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Disable</span></button>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-primary text-white disabled" tabindex="-1" type="submit" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Save changes</span>
        <transition-stub>
          <!---->
        </transition-stub>
      </button>
    </div>
    <!--v-if-->
  </form>
</div>
`;

exports[`Storyshots activities/components/ActivityEdit With Duration 1`] = `
<div class="edit-box">
  <div class="q-mb-lg">
    <!--v-if-->
  </div>
  <form class="q-gutter-y-lg">
    <!--v-if-->
    <div class="row q-mt-xs"><label class="q-field row no-wrap items-start q-field--outlined q-input q-mr-sm" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="9" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <!---->
      </label><label class="q-field row no-wrap items-start q-field--outlined q-input" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <div class="q-px-md self-center">to</div><label class="q-field row no-wrap items-start q-field--outlined q-input" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" tabindex="0" size="3" id="f_01010101-0101-4101-8101-010101010101" type="text">
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center"><i class="q-icon text-grey notranslate material-icons cursor-pointer" aria-hidden="true" role="presentation">cancel</i>
          <div class="text-caption q-ml-xs"> () </div>
        </div>
      </label>
      <div class="col-12 q-field__bottom">
        <div>When should it take place?</div>
      </div>
    </div>
    <div class="mentionable" style="position: relative;">
      <div class="relative-position q-mb-sm"><label class="q-field row no-wrap items-start q-field--outlined q-textarea q-textarea--autogrow q-field--float q-field--labeled q-field--with-bottom" for="f_01010101-0101-4101-8101-010101010101">
          <!---->
          <div class="q-field__inner relative-position col self-stretch">
            <div class="q-field__control relative-position row no-wrap bg-orange-1" tabindex="-1">
              <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip" style="margin-bottom: -1px;"><textarea class="q-field__native q-placeholder" style="overflow: hidden; min-height: auto; height: 0px;" tabindex="0" rows="1" aria-label="Additional information" id="f_01010101-0101-4101-8101-010101010101" maxlength="5000"></textarea>
                <div class="q-field__label no-pointer-events absolute ellipsis">Additional information</div>
                <!---->
              </div>
            </div>
            <div class="q-field__bottom row items-start q-field__bottom--animated">
              <transition-stub>
                <div class="q-field__messages col"></div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <div class="q-field__after q-field__marginal row no-wrap items-center"><button class="q-btn q-btn-item non-selectable no-outline q-btn--unelevated q-btn--rectangle q-btn--actionable q-focusable q-hoverable q-btn--dense" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons" aria-hidden="true" role="img">undo</i></span></button></div>
        </label><button class="q-btn q-btn-item non-selectable no-outline q-btn--outline q-btn--rectangle text-primary q-btn--actionable q-focusable q-hoverable absolute-bottom-right bg-white" style="font-size: 8px; bottom: -10px;" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><span class="block">Preview</span>
          <!----></span>
        </button></div>
      <div class="v-popper v-popper--theme-mentionable v-popper--theme-dropdown popper v-popper--theme-mentionable v-popper--theme-dropdown popper" offset="6" style="position: absolute;">
        <div></div>
      </div>
    </div>
    <div class="q-ml-lg col-12 q-field__bottom text-warning"><i class="q-icon notranslate material-icons" aria-hidden="true" role="presentation">warning</i> This value differs from the default. To undo this change, click on the arrow button and save the changes.</div>
    <div>
      <div class="row">
        <!--v-if-->
        <div class="q-space"></div>
        <!--v-if-->
      </div><label class="q-field row no-wrap items-start q-field--outlined q-input q-field--float q-field--labeled q-field--with-bottom q-my-md" for="f_01010101-0101-4101-8101-010101010101">
        <!---->
        <div class="q-field__inner relative-position col self-stretch">
          <div class="q-field__control relative-position row no-wrap bg-null" tabindex="-1">
            <div class="q-field__control-container col relative-position row no-wrap q-anchor--skip"><input class="q-field__native q-placeholder" style="max-width: 100px;" tabindex="0" aria-label="Max Slots" placeholder="unlimited" id="f_01010101-0101-4101-8101-010101010101" type="number">
              <div class="q-field__label no-pointer-events absolute ellipsis">Max Slots</div>
              <div class="q-slider q-slider--h q-slider--inactive inline no-wrap column q-slider--enabled q-slider--editable q-slider--label q-mx-sm self-end" role="slider" aria-valuemin="1" aria-valuemax="10" aria-orientation="horizontal" data-step="1" aria-valuenow="2" style="min-width: 60px;">
                <div class="q-slider__track-container q-slider__track-container--h" tabindex="0">
                  <div class="q-slider__track relative-position no-outline" style="height: 4px;">
                    <div class="q-slider__inner absolute" style="left: 0%; width: 100%;"></div>
                    <div class="q-slider__selection absolute" style="left: 0%; width: 11.11111111111111%;"></div>
                    <div class="q-slider__markers q-slider__markers--h absolute overflow-hidden" style="left: 0%; width: 100%; background-size: 11.11111111111111% 2px;"></div>
                    <div class="q-slider__thumb q-slider__thumb--h q-slider__thumb--h-ltr absolute non-selectable" style="width: 20px; height: 20px; left: 11.11111111111111%;"><svg class="q-slider__thumb-shape absolute-full" viewBox="0 0 20 20" aria-hidden="true">
                        <path d="M 4, 10 a 6,6 0 1,0 12,0 a 6,6 0 1,0 -12,0"></path>
                      </svg>
                      <div class="q-slider__focus-ring fit"></div>
                      <div class="q-slider__pin q-slider__pin--h q-slider__pin--h-standard absolute fit no-pointer-events">
                        <div class="q-slider__label q-slider__label--h q-slider__label--h-standard" style="min-width: 20px;">
                          <div class="q-slider__text-container q-slider__text-container--h q-slider__text-container--h-standard" style="transform: translateX(calc(-0.7777777777777778 * 20px / 2 + 38.888888888888886%));"><span class="q-slider__text">2</span></div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div class="q-field__bottom row items-start q-field__bottom--animated">
            <transition-stub>
              <div class="q-field__messages col">
                <div>How many people should participate?</div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <div class="q-field__after q-field__marginal row no-wrap items-center">
          <!--v-if-->
        </div>
      </label>
      <!--v-if-->
    </div>
    <!--v-if-->
    <!--v-if-->
    <div class="row justify-end q-gutter-sm q-mt-lg">
      <div class="q-toggle cursor-pointer no-outline row inline no-wrap items-center" tabindex="0" role="checkbox" aria-label="Preview" aria-checked="false">
        <div class="q-toggle__inner relative-position non-selectable q-toggle__inner--falsy"><input class="hidden q-toggle__native absolute q-ma-none q-pa-none" type="checkbox">
          <div class="q-toggle__track"></div>
          <div class="q-toggle__thumb absolute flex flex-center no-wrap"></div>
        </div>
        <div class="q-toggle__label q-anchor--skip">Preview</div>
      </div>
      <div class="q-space"></div>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle disabled" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Reset</span></button><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-red text-white q-btn--actionable q-focusable q-hoverable" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Disable</span></button>
      <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--standard q-btn--rectangle bg-primary text-white disabled" tabindex="-1" type="submit" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row">Save changes</span>
        <transition-stub>
          <!---->
        </transition-stub>
      </button>
    </div>
    <!--v-if-->
  </form>
</div>
`;

exports[`Storyshots activities/components/ActivityItem Normal 1`] = `
<div class="q-card activity-item">
  <!--v-if-->
  <div class="q-card__section q-card__section--vert no-padding content">
    <div class="content-inner">
      <div class="row no-wrap items-start justify-between">
        <div><strong class="featured-text">10:00 AM <!--v-if--></strong>Monday, December 25, 2017</div>
      </div>
      <!--v-if-->
      <!--v-if-->
      <div class="">
        <div>
          <!-- eslint-disable vue/no-v-html -->
          <div class="markdown">
            <p>Incidunt sed et alias necessitatibus veniam dolore nihil. Dolorem blanditiis et ut molestiae magni quis ea. Ut odio quia dolore.<br>
              Quia cum illo. Commodi adipisci eius vitae consequatur doloribus repudiandae qui est. Qui facere illo eos numquam qui dolore qui est nisi. Fugiat molestias nisi. Aliquam et non ad eos ab. Et in impedit et nostrum voluptatibus quo.</p>
          </div><!-- eslint-enable -->
          <!--v-if-->
        </div>
        <div class="overlay"></div>
        <!--v-if-->
      </div>
      <div class="q-mt-none q-mb-none full-width column q-gutter-y-md">
        <div class="col">
          <!--v-if-->
          <div class="row justify-start"><object style="display: block; position: absolute; top: 0px; left: 0px; right: 0px; bottom: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;" tabindex="-1" type="text/html" data="about:blank" aria-hidden="true"></object>
            <div class="user-slot-wrapper greyedOut" style="width: 36px; height: 36px;">
              <!--v-if-->
            </div>
            <div class="user-slot-wrapper greyedOut" style="width: 36px; height: 36px;">
              <!--v-if-->
            </div>
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>
        <!---->
        <!---->
      </div>
    </div>
  </div>
  <div class="q-card__section q-card__section--vert row no-padding full-width justify-end bottom-actions">
    <!--
        button can be in 4 states where user:
        - has not already joined, and has a suitable role to join
        - has not already joined, but does not have suitable role, so cannot join
        - has joined, but it's already started, so can't leave
        - has joined, and can leave
      --><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--rectangle text-grey-5 disabled q-btn--no-uppercase action-button" tabindex="-1" type="button" disabled="" aria-disabled="true"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon text-grey-5 fas fa-fw fa-asterisk q-mr-sm" style="font-size: 18px;" aria-hidden="true" role="presentation"> </i><span class="block">Join </span></span>
      <transition-stub>
        <!---->
      </transition-stub>
    </button>
    <!--v-if-->
    <div class="q-space"></div>
    <!--v-if--><button class="q-btn q-btn-item non-selectable no-outline q-btn--flat q-btn--rectangle text-secondary q-btn--actionable q-focusable q-hoverable q-btn--no-uppercase action-button" tabindex="0" type="button"><span class="q-focus-helper"></span><span class="q-btn__content text-center col items-center q-anchor--skip justify-center row"><i class="q-icon notranslate material-icons q-mr-xs icon-chat" style="font-size: 18px;" aria-hidden="true" role="presentation">chat</i><span class="block">Open Chat</span></span></button>
  </div>
</div>
`;

exports[`Storyshots notifications/Notifications All Notifications 1`] = `
<div class="bg-white">
  <div class="full-width text-center generic-padding" style="display: none;"><svg class="q-spinner" fill="currentColor" width="40" height="40" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg">
      <circle cx="15" cy="15" r="15">
        <animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear" repeatCount="indefinite"></animate>
        <animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1" calcMode="linear" repeatCount="indefinite"></animate>
      </circle>
      <circle cx="60" cy="15" r="9" fill-opacity=".3">
        <animate attributeName="r" from="9" to="9" begin="0s" dur="0.8s" values="9;15;9" calcMode="linear" repeatCount="indefinite"></animate>
        <animate attributeName="fill-opacity" from=".5" to=".5" begin="0s" dur="0.8s" values=".5;1;.5" calcMode="linear" repeatCount="indefinite"></animate>
      </circle>
      <circle cx="105" cy="15" r="15">
        <animate attributeName="r" from="15" to="15" begin="0s" dur="0.8s" values="15;9;15" calcMode="linear" repeatCount="indefinite"></animate>
        <animate attributeName="fill-opacity" from="1" to="1" begin="0s" dur="0.8s" values="1;.5;1" calcMode="linear" repeatCount="indefinite"></animate>
      </circle>
    </svg></div>
  <div class="q-list">
    <!--v-if-->
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-angle-double-up q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Georgia Hoeger gained editing permissions</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="May 15, 2017, 6:42 AM" style="display: inline;">7 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-angle-double-up q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> You gained editing permissions</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Sep 16, 2017, 6:48 PM" style="display: inline;">3 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <div class="q-item__section column q-item__section--side justify-center q-pr-sm">
        <div class="wrapper" style="width: 40px; height: 40px;"><a title="Connie Kunze">
            <div text="Connie Kunze" seed="2" class="randomArt fill"></div>
          </a></div>
      </div>
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-address-card q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> applied to join your group</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Nov 9, 2017, 6:54 AM" style="display: inline;">about 2 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-check q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Your application was accepted!</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="May 28, 2017, 12:33 PM" style="display: inline;">7 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-times q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Your application was declined</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Apr 15, 2017, 8:01 AM" style="display: inline;">8 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-reply q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> You can give feedback - Task on Monday 10:00 AM</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Mar 11, 2017, 8:02 AM" style="display: inline;">10 months ago</div> · enable Corporate bypassing Bedfordshire Tuna · Automotive Jewelery Intelligent connecting Cambridgeshire
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-circle q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Automotive Jewelery Intelligent connecting Cambridgeshire has been created</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Feb 19, 2017, 8:59 AM" style="display: inline;">10 months ago</div> · enable Corporate bypassing Bedfordshire Tuna · Automotive Jewelery Intelligent connecting Cambridgeshire
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <div class="q-item__section column q-item__section--side justify-center q-pr-sm">
        <div class="wrapper" style="width: 40px; height: 40px;"><a title="Connie Kunze">
            <div text="Connie Kunze" seed="2" class="randomArt fill"></div>
          </a></div>
      </div>
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-user-plus q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Connie Kunze joined your group</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Sep 21, 2017, 7:27 AM" style="display: inline;">3 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <div class="q-item__section column q-item__section--side justify-center q-pr-sm">
        <div class="wrapper" style="width: 40px; height: 40px;"><a title="Connie Kunze">
            <div text="Connie Kunze" seed="2" class="randomArt fill"></div>
          </a></div>
      </div>
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-user-plus q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Connie Kunze accepted your invitation</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Nov 4, 2017, 9:24 AM" style="display: inline;">about 2 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label">
          <!--v-if--> Reminder: Task at 10:00 AM
        </div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Jun 23, 2018, 5:12 AM" style="display: inline;">in 6 months</div> · enable Corporate bypassing Bedfordshire Tuna · Automotive Jewelery Intelligent connecting Cambridgeshire
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-times q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Task on Monday, December 25 at 10:00 AM was disabled</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Jun 20, 2017, 10:48 AM" style="display: inline;">6 months ago</div> · enable Corporate bypassing Bedfordshire Tuna · Automotive Jewelery Intelligent connecting Cambridgeshire
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-check q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Task on Monday, December 25 at 10:00 AM was enabled again</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="May 13, 2017, 9:15 AM" style="display: inline;">8 months ago</div> · enable Corporate bypassing Bedfordshire Tuna · Automotive Jewelery Intelligent connecting Cambridgeshire
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-clock q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Task was moved to Monday, December 25 at 10:00 AM</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Aug 20, 2017, 12:13 PM" style="display: inline;">4 months ago</div> · enable Corporate bypassing Bedfordshire Tuna · Automotive Jewelery Intelligent connecting Cambridgeshire
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <div class="q-item__section column q-item__section--side justify-center q-pr-sm">
        <div class="wrapper" style="width: 40px; height: 40px;"><a title="Connie Kunze">
            <div text="Connie Kunze" seed="2" class="randomArt fill"></div>
          </a></div>
      </div>
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-frown-open q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Join the discussion about a conflict with Connie Kunze</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Jul 11, 2017, 3:52 AM" style="display: inline;">6 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-frown-open q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> A conflict resolution process was started with you</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Jun 22, 2017, 5:42 PM" style="display: inline;">6 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <div class="q-item__section column q-item__section--side justify-center q-pr-sm">
        <div class="wrapper" style="width: 40px; height: 40px;"><a title="Connie Kunze">
            <div text="Connie Kunze" seed="2" class="randomArt fill"></div>
          </a></div>
      </div>
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-frown-open q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> The conflict resolution process with Connie Kunze continues</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="May 24, 2017, 9:28 PM" style="display: inline;">7 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-frown-open q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> The conflict resolution process with you continues</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Aug 6, 2017, 1:12 AM" style="display: inline;">5 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <div class="q-item__section column q-item__section--side justify-center q-pr-sm">
        <div class="wrapper" style="width: 40px; height: 40px;"><a title="Connie Kunze">
            <div text="Connie Kunze" seed="2" class="randomArt fill"></div>
          </a></div>
      </div>
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-frown-open q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> The conflict resolution process with Connie Kunze was decided</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="May 11, 2017, 5:48 AM" style="display: inline;">8 months ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-frown-open q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> The conflict resolution process with you was decided</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Nov 26, 2017, 2:16 PM" style="display: inline;">28 days ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon fas fa-times q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> You were removed from the group</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Nov 24, 2017, 2:34 PM" style="display: inline;">30 days ago</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <div class="q-item q-item-type row no-wrap isUnread">
      <!--v-if-->
      <div class="q-item__section column q-item__section--main justify-center">
        <div style="overflow: hidden; display: -webkit-box;" class="q-item__label"><i class="q-icon far fa-clock q-mx-xs vertical-baseline" aria-hidden="true" role="presentation"> </i> Voting ends soon, don't forget to participate!</div>
        <div class="q-item__label q-item__label--caption text-caption">
          <div title="Apr 7, 2018, 8:36 PM" style="display: inline;">in 3 months</div> · enable Corporate bypassing Bedfordshire Tuna
          <!--v-if-->
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>
`;
